--- a/pet-web/package.json
+++ b/pet-web/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "leaflet": "^1.9.4",
+    "mdb-react-ui-kit": "^7.2.0",
     "primeicons": "^6.0.1",
     "primereact": "^10.4.0",
     "react": "^18.2.0",
@@ -29,7 +30,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  
   "eslintConfig": {
     "extends": [
       "react-app",
